<resources>
    <string name="app_name">FirebaseForum</string>
    <string name="title_home">Home</string>
    <string name="title_forums">Posts</string>
    <string name="login_str">Login</string>
    <string name="register_str">Register</string>
    <string name="password_hint">Password (confirm)</string>
    <string name="password_label">Password</string>
    <string name="e_mail_label">E-mail</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="password_mismatch">Password is not the same</string>
    <string name="name">Post title</string>
    <string name="create_str">Create</string>
    <string name="cancel_str">Cancel</string>
    <string name="missing_input">Missing input</string>
    <string name="name_taken">Post title is used</string>
    <string name="enter_str">Enter</string>
    <string name="wrong_pass_msg">Wrong password</string>
    <string name="try_again_msg">Try again</string>
    <string name="is_private_msg">Is private</string>
    <string name="last_message_str">Last answered by:</string>
    <string name="new_room_str">New post</string>
    <string name="post">Post</string>
    <string name="give_an_answer">Give an answer</string>
    <string name="restrict_access_to_post_with_password">Restrict access to post with password</string>
    <string name="invalid_nickname">Invalid nick</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>