<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <Button
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:text="Reset password"
        android:textColor="@color/secondary_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_register_toggle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="366dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/e_mail_label"
        android:textColorHint="@color/primary"
        android:visibility="visible"

        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary_variant"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/secondary"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/nick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/primary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopStart="30dp"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            tools:text="email@domain.com" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_label"
        android:textColorHint="@color/primary"
        android:visibility="visible"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary_variant"
        app:boxStrokeWidth="1dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/secondary"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/login_password_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/primary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopStart="30dp"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="myPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_confirm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/primary"
        android:visibility="gone"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary_variant"

        app:boxStrokeWidth="1dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/secondary"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/primary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopStart="30dp"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="myPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nick"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:hint="Nick (How you be seen by others)"
        android:textColorHint="@color/primary"
        android:visibility="visible"

        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary_variant"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/secondary"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/primary"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopStart="30dp"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:text="nick" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/login_str"
        app:cornerRadius="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <Button
        android:id="@+id/login_register_toggle"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/register_str"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/secondary_variant"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_register_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>