<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:contentPadding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/name"
            android:textColorHint="@color/primary_variant"
            android:visibility="visible"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/primary_variant_light"
            app:boxStrokeColor="@color/primary_variant"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/secondary"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopStart="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="14sp"
                tools:text="My new room"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/filepath"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic"
            android:gravity="center"
            android:background="@drawable/left_side_round"
            android:backgroundTint="@color/grey"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintEnd_toStartOf="@id/file_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/room_name"
            tools:text="No file selected" />

        <ImageButton
            android:id="@+id/file_button"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/btn_default"
            android:backgroundTint="@color/grey"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@id/filepath"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filepath"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Post Description"
            android:textColorHint="@color/primary_variant"
            android:visibility="visible"
            app:boxBackgroundColor="@color/primary_variant_light"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/primary_variant"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/secondary"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filepath"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage|textMultiLine"
                android:lineSpacingExtra="1sp"
                android:minHeight="30dp"
                android:nestedScrollingEnabled="true"
                android:scrollbars="vertical"
                android:textAlignment="center"
                android:textSize="12sp"
                tools:text="No description yet!" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/dialog_positive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_str"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/room_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dialog_negative_button"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <Button
            android:id="@+id/dialog_negative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/grey"
            android:text="@string/cancel_str"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_positive_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/room_name"
             />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>